# engine

./: .gitignore  .gitmodules  CMakeLists.txt  PLAN.md  README.md  build.sh
src/: camera.c  camera.h  clock.c  clock.h  common.c  common.h  cpu_impl.c  gpu_impl.c  main.c  main.cpp  model.c  model.h  renderable.c  renderable.h  scene.c  scene.h  shader.glsl  shell.html  vertex.c  vertex.h  vertices.h
